--- a/body {.css
+++ b/body {.css
@@ -15,7 +15,7 @@ section {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 410px;
+  width: 420px;
   height: 350px;
   animation-duration: 2s;
   animation-name: cube-rotate;
@@ -56,11 +56,10 @@ section {
   width: 100%;
   height: 100%;
   padding: 8px;
-  background: linear-gradient(24deg, rgba(50 0 255/10%), CornflowerBlue),
-    url("data:image/svg+xml,%3Csvg viewBox='0 0 400 310' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.55' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+  background: linear-gradient(24deg, rgba(50 0 255/10%), CornflowerBlue), url("data:image/svg+xml,%3Csvg viewBox='0 0 400 310' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.55' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
   background-clip: text;
   -webkit-background-clip: text;
-  color: transparent;
+	color: transparent;
   animation-duration: 2s;
   animation-name: shimmer;
   animation-iteration-count: infinite;
@@ -76,7 +75,7 @@ section {
   mix-blend-mode: multiply;
 }
 
-@media all and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
+@media all and (-webkit-min-device-pixel-ratio:0) and (min-resolution: .001dpcm) {
   .overlay {
     opacity: 0.6;
   }
